# av_training

./: .clang-format  .gitmodules  CMakeLists.txt  ChangeLog  QtCreatorDeployment.txt  avicon.pro  build_all.sh  consts.h  debug.h  get_defcore_hash.sh  get_tag.sh  lrelease.sh  lupdate.sh  makeall.sh  set_compiler.sh  update_i18n.sh  version.pri
core/: CMakeLists.txt  androidJNI.cpp  androidJNI.h  appdatapath.cpp  appdatapath.h  channelscontroller.cpp  channelscontroller.h  checkcalibration.cpp  checkcalibration.h  closure.h  colorscheme.cpp  colorscheme.h  colorschememanager.cpp  colorschememanager.h  core.cpp  core.h  coredefinitions.h  defcore.cpp  defcore.h  defectmarker.cpp  defectmarker.h  direction.cpp  enums.h  filemanager.cpp  filemanager.h  limitsforsens.cpp  limitsforsens.h  passwordmanager.cpp  passwordmanager.h  registration.cpp  registration.h  settings.cpp  settings.h
core/androidcamera/: camera_advanced.cpp  camera_advanced.h  cameraworker.cpp  cameraworker.h
core/audio/: alarmtone.cpp  alarmtone.h  alarmtone_p.cpp  alarmtone_p.h  audiogenerator.cpp  audiogenerator.h  audiooutput.cpp  audiooutput.h  sounddata.cpp  sounddata.h
core/audio/alsa/: qalsaaudiodeviceinfo.cpp  qalsaaudiodeviceinfo.h  qalsaaudiooutput.cpp  qalsaaudiooutput.h
core/bluetooth/: avicon31bluetooth.cpp  avicon31bluetooth.h  bluetoothmanager.h  bluetoothmanagerandroid.cpp  bluetoothmanagerandroid.h  bluetoothmanagerqt.cpp  bluetoothmanagerqt.h  fakebluetoothmanager.cpp  fakebluetoothmanager.h
core/db/: DataBaseManager.cpp  DataBaseManager.h
core/externalkeyboard/: externalkeyboard.cpp  externalkeyboard.h  externalkeyboardfake.cpp
core/ftp/: ftpclient.cpp  ftpclient.h  ftpuploader.cpp  ftpuploader.h
core/geoposition/: geoposition.cpp  geoposition.h  geopositionfake.cpp  locationutils.cpp  locationutils.h  nmeapositioninfosource.cpp  nmeapositioninfosource.h  nmeareader.cpp  nmeareader.h  nmeasatelliteinfosource.cpp  nmeasatelliteinfosource.h
core/gpio/: gpio.cpp  gpio.h  gpio_fake.cpp
core/models/: channelsmodel.cpp  channelsmodel.h  channelsproxyfiltermodel.cpp  channelsproxyfiltermodel.h  channelsproxytablemodel.cpp  channelsproxytablemodel.h  modeltypes.h  roles.h  tapemodel.cpp  tapemodel.h
core/mxccamera/: mxccamera.cpp  mxccamera.h  mxccameraimagecapture.cpp  mxccameraimagecapture.h  mxcmediarecorder.cpp  mxcmediarecorder.h
core/notifications/: defaultnotificationmanager.cpp  defaultnotificationmanager.h  notificationmanager.h
core/powermanagement/: advantechpowermanagement.cpp  advantechpowermanagement.h  battery.cpp  battery.h  powermanagement.cpp  powermanagement.h  utsvupowermanagement.cpp  utsvupowermanagement.h
core/remotecontrol/: remotecontrol.cpp  remotecontrol.h
core/screen/: brightness_advantech.cpp  brightness_fake.cpp  brightness_utsvu.cpp  screen.h  screen_fake.cpp  screen_utsvu.cpp
core/temperature/: temperaturesensor.h  temperaturesensormanager.cpp  temperaturesensormanager.h
core/trackmarks/: tmmetric.cpp  tmmetric.h  tmmetric1km.cpp  tmmetric1km.h  tmrussian.cpp  tmrussian.h  trackmarks.h
core/videocontroller/: videocontrolprotocol.h  videoplayercontroller.cpp  videoplayercontroller.h
core/wifimanager/: wifimanager.cpp  wifimanager.h
defcore/: .gitignore  CMakeLists.txt  ChannelsIds.h  ChannelsTable.cpp  ChannelsTable.h  CriticalSection.h  CriticalSection_Lin.cpp  CriticalSection_Lin.h  CriticalSection_Win.cpp  CriticalSection_Win.h  DataTr.cpp  Definitions.h  Device.cpp  Device.h  DeviceCalibration.cpp  DeviceCalibration.h  DeviceCalibration_definitions.h  DeviceConfig.cpp  DeviceConfig.h  DeviceConfig_Autocon.cpp  DeviceConfig_Autocon.h  DeviceConfig_Autocon_Alignment.cpp  DeviceConfig_Autocon_Alignment.h  DeviceConfig_Av15_usbcan.cpp  DeviceConfig_Av15_usbcan.h  DeviceConfig_Avk31.cpp  DeviceConfig_Avk31.h  DeviceConfig_Avk31E.cpp  DeviceConfig_Avk31E.h  DeviceConfig_BUMTEST.cpp  DeviceConfig_BUMTEST.h  DeviceConfig_DB_can.cpp  DeviceConfig_DB_can.h  DeviceConfig_DB_lan.cpp  DeviceConfig_DB_lan.h  DeviceConfig_HeadScan.cpp  DeviceConfig_HeadScan.h  DeviceConfig_HeadScan_Test.cpp  DeviceConfig_HeadScan_Test.h  DeviceConfig_ManualSet.cpp  (+33 more)
defcore/av11/: av11_21.h
defcore/data_container_old/: data_container.cpp  data_container.h  data_container_constants.h
defcore/datacontainer/: DataContainer.cpp  DataContainer.h  dc_definitions.h  dc_functions.cpp  dc_functions.h  regar_interface.h  regar_interface_fake.h
defcore/datatransfers/: datatransfer_can.cpp  datatransfer_can.h  datatransfer_lan.cpp  datatransfer_lan.h  datatransfer_padcan.cpp  datatransfer_padcan.h  datatransfer_usbcan_and.cpp  datatransfer_usbcan_and.h  datatransfer_usbcan_win.cpp  datatransfer_usbcan_win.h  idatatransfer.cpp  idatatransfer.h
defcore/defcore4linux/: defcore4linux.pro  main.cpp
defcore/ekasui/: EK_ASUIdata.cpp  EK_ASUIdata.h
defcore/prot_umu/: iumu.cpp  iumu.h  prot_umu_can.cpp  prot_umu_can.h  prot_umu_can_constants.h  prot_umu_lan.cpp  prot_umu_lan.h  prot_umu_lan_constants.h  prot_umu_padcan.cpp  prot_umu_padcan.h  prot_umu_rawcan.cpp  prot_umu_rawcan.h  prot_umu_usbcan_and.cpp  prot_umu_usbcan_and.h  prot_umu_usbcan_win.cpp  prot_umu_usbcan_win.h  utils_can.h
defcore/sockets/: isocket.cpp  isocket.h  socket_can.cpp  socket_can.h  socket_can_fake.cpp  socket_lan.cpp  socket_lan.h  socket_usbcan_and.cpp  socket_usbcan_and.h  socket_usbcan_win.cpp  socket_usbcan_win.h
ui/widgets/: .directory  CMakeLists.txt  accessories.cpp  accessories.h  ascanpage.cpp  ascanpage.h  ascanpage.ui  batterywidget.cpp  batterywidget.h  batterywidget.ui  bottomsignalampl.cpp  bottomsignalampl.h  bscangates.cpp  bscangates.h  bscanmovementcontrols.cpp  bscanmovementcontrols.h  bscanmovementcontrols.ui  bscanpage.cpp  bscanpage.h  bscanpage.ui  bscanplot.cpp  bscanplot.h  bscantape.cpp  bscantape.h  bscantape.ui  clock.cpp  clock.h  colors.cpp  colors.h  dbmarksview.cpp  dbmarksview.h  dbmarksview.ui  electrictestpage.cpp  electrictestpage.h  electrictestpage.ui  encoderpage.cpp  encoderpage.h  encoderpage.ui  handchannelssettingsitem.cpp  handchannelssettingsitem.h  (+110 more)
(+329 files in other folders)
